# -AI-Research-Assistant

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: chat.py  papers.py
app/core/: config.py
app/services/ai/: llm_provider.py  rag_service.py
app/services/ingestors/: arxiv_ingestor.py  doi_ingestor.py  pdf_ingestor.py  text_ingestor.py
app/services/knowledge/: vector_store.py
app/static/: index.html
tests/: test_research_ai.py
